--- a/003.NY-City-Blog/index.html
+++ b/003.NY-City-Blog/index.html
@@ -69,7 +69,7 @@
         </section>
     </main>
     <footer id="about">
-        <p>Posted by: Shashi</p>
+        <p>Posted by: Olly</p>
         <p>Contact information: Blogger@NYC.com</p>
     </footer>
 </body>
