Made changes to team section

--- a/021.Company-Webpage/index.html
+++ b/021.Company-Webpage/index.html
@@ -113,10 +113,10 @@
                     <div class="content">
                         <div class="team-member">
                             <div class="mugshot">
-                                <img src="./resources/images/CEO.jpg" alt="Dad">
+                                <img src="./media/employee 1.webp" alt="Ozzie">
                             </div>
                             <div class="label">
-                                <h3>Stephen Elliott</h3>
+                                <h3>Ozzie Vernon</h3>
                                 <p>Founder</p>
                                 <p>CEO</p>
                                 <p>Head Smoker</p>
@@ -124,10 +124,10 @@
                         </div>
                         <div class="team-member">
                             <div class="mugshot">
-                                <img src="./resources/images/Sarah.jpg" alt="Oliver">
+                                <img src="./media/employee 2.webp" alt="Raven">
                             </div>
                             <div class="label">
-                                <h3>Oliver Elliott</h3>
+                                <h3>Raven Tracey</h3>
                                 <p>Co-founder</p>
                                 <p>Assistant Smoker</p>
                                 <p>Marketing</p>
@@ -135,10 +135,10 @@
                         </div>
                         <div class="team-member">
                             <div class="mugshot">
-                                <img src="./resources/images/chef.jpg" alt="Grandma">
+                                <img src="./media/employee 3.webp" alt="Letitia">
                             </div>
                             <div class="label">
-                                <h3>Dorothy Elliott</h3>
+                                <h3>Letitia Velvet</h3>
                                 <p>Partner</p>
                                 <p>Chief of Production</p>
                                 <p>Heritage</p>
