--- a/022.Club-Website/about.html
+++ b/022.Club-Website/about.html
@@ -14,7 +14,7 @@
     <body>
         <section class="sub-header">
             <nav>
-                <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="resources/images/logo.png" alt="Logo"></a>
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
@@ -41,7 +41,7 @@
                     <a href="contact.html" class="cnt-btn red-btn">FIND US</a>
                 </div>
                 <div class="about-col">
-                    <img src="images/about 2.jpeg">
+                    <img src="resources/images/about 2.jpeg">
                 </div>
             </div>
 
