Added form handler and updated contact deets

--- a/022.Club-Website/index.html
+++ b/022.Club-Website/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="sponsor-col">
                     <h3>FORGE HOMES</h3>
-                    <img src="resources/images/sponsor 4.jpeg">
+                    <img src="resources/images/sponsor 4.png">
                 </div>
             </div>
 
@@ -147,7 +147,7 @@
 
         <footer>
             <h4>CONTACT INFO:</h4>
-            <p>Email: sedgefieldcc1872@gmail.com <br> Mobile: 07912345690</p>
+            <p>Email: sedgefieldcc1849@gmail.com <br> Mobile: 07912345690</p>
             <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
             <i class="fa fa-instagram"></i>
