--- a/024.Dog-Years/index.html
+++ b/024.Dog-Years/index.html
@@ -16,7 +16,7 @@
     <!-- JavaScript -->
     <script>
         // Declare an age variable and assign a value to it.
-        const myAge = 36;
+        const myAge = 24;
 
         // Declare an early years variable and assign a value to it.
         let earlyYears = 2;
@@ -40,7 +40,7 @@
         let myAgeInDogYears = earlyYears + laterYears;
 
         // Use a string method on the my name variable
-        let myName = 'Shashi'.toLowerCase();
+        let myName = 'Olly'.toLowerCase();
 
         // Log the statement that displays my name and age in dog years.
         console.log(
