--- a/026.Personal-Portfolio/home.html
+++ b/026.Personal-Portfolio/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="resources/css/styles.css">
     <title>Personal Portfolio</title>
 </head>
 
@@ -14,7 +14,7 @@
     <nav>
         <div class="nav-logo">
             <a href="home.html">
-                <img src="images/my-logo.png">
+                <img src="resources/images/my-logo.png">
             </a>
         </div>
 
@@ -42,7 +42,7 @@
             <button class="btn">Get in Touch</button>
         </div>
         <div class="image">
-            <img src="images/header.png">
+            <img src="resources/images/header.png">
         </div>
     </header>
 
@@ -99,7 +99,7 @@
                 <div class="content">
                     <h4>Weather App</h4>
                     <p>Utilises openweather api to give weather info in realtime!</p>
-                    <img src="images/screenshot.jpeg">
+                    <img src="resources/images/screenshot.jpeg">
                     <button class="btn">Contact Now</button>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                 <div class="content">
                     <h4>Pixel Art Generator</h4>
                     <p>Simple pixel art paint app with options for canvas generation.</p>
-                    <img src="images/screenshot 2.jpeg">
+                    <img src="resources/images/screenshot 2.jpeg">
                     <button class="btn">Contact Now</button>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                 <div class="content">
                     <h4>Pass Generator</h4>
                     <p>A pass generator with different options to manage password creation.</p>
-                    <img src="images/screenshot 3.jpeg">
+                    <img src="resources/images/screenshot 3.jpeg">
                     <button class="btn">Contact Now</button>
                 </div>
             </div>
@@ -131,7 +131,7 @@
         <span class="blur"></span>
         <div class="column">
             <div class="logo">
-                <img src="images/my-logo.png">
+                <img src="resources/images/my-logo.png">
             </div>
             <div class="socials">
                 <a href="#"><i class="ri-instagram-line"></i></a>
