Altered education containers

--- a/026.Personal-Portfolio/about.html
+++ b/026.Personal-Portfolio/about.html
@@ -93,29 +93,48 @@
         <p class="sub-header">
             See below some of my qualifications!
         </p>
-        <div class="project">
+        <div class="skills">
             <div class="card">
                 <div class="content">
-                    
+                    <h4>IT Careers Switch</h4>
+                    <p>
+                        HTML, CSS, JavaScript, Python<br>
+                        PHP<br>
+                        React<br>
+                        SQL<br>
+                    </p>
                 </div>
+                <a href="#">Contact Now <i class="ri-arrow-right-line"></i></a>
             </div>
-            <button class="btn">Contact Now</button>
         </div>
-        <div class="project">
+        <div class="skills">
             <div class="card">
                 <div class="content">
-                    
+                    <h4>University</h4>
+                    <p>
+                        Mandarin, Japanese & Korean<br>
+                        First Class Honours<br>
+                        Gaisce Presidents award<br>
+                        Class Representative<br>
+                    </p>
                 </div>
+                <a href="#">Contact Now <i class="ri-arrow-right-line"></i></a>
             </div>
-            <button class="btn">Contact Now</button>
         </div>
-        <div class="project">
+        <div class="skills">
             <div class="card">
                 <div class="content">
-
+                    <h4>Linkedin & Google</h4>
+                    <p>
+                        Microsoft Office products<br>
+                        AutoCAD<br>
+                        Adobe Photoshop<br>
+                        Google Fundamentals of Digital Marketing<br>
+                        Google Ads Certified<br>
+                    <p>
                 </div>
+                <a href="#">Contact Now <i class="ri-arrow-right-line"></i></a>
             </div>
-            <button class="btn">Contact Now</button>
         </div>
     </section>
 
