Updated get in touch button

--- a/026.Personal-Portfolio/home.html
+++ b/026.Personal-Portfolio/home.html
@@ -39,7 +39,7 @@
             <p> 
                 I'm Oliver, a junior full-stack web developer with a passion for crafting stunning and responsive websites and games. I specialise in using both front and back-end technologies to bring unique and engaging ideas to life.
             </p>
-            <button class="btn">Get in Touch</button>
+            <a href="contact.html"><button class="btn">Get in Touch</button></div></a>
         </div>
         <div class="image">
             <img src="resources/images/header.png">
