Update to styles

--- a/026.Personal-Portfolio/home.html
+++ b/026.Personal-Portfolio/home.html
@@ -52,8 +52,7 @@
             <div class="card">
                 <span><i class="fa-solid fa-gears"></i></span>
                 <h4>Responsive Design</h4>
-               <p>Explore a diverse collection of my creative endeavors, including web design, javascript and mini
-                    projects.
+               <p>  
                     Each project showcases my creativity, attention to detail, and passion for delivering visually
                     stunning and engaging experiences.
                 </p> 
@@ -63,16 +62,14 @@
                 <span><i class="fa-solid fa-cubes"></i></span>
                 <h4>Creative Projects</h4>
                 <p>
-                    Behind the scenes, I pride myself on writing clean, efficient, and maintainable code. Learn more
-                    about my coding standards and practices that contribute to the functionality and performance of the
-                    projects I undertake.
+                    Behind the scenes, I pride myself on writing clean, efficient, and maintainable code.
                 </p> 
                 <a href="contact.html">Contact Now <i class="ri-arrow-right-line"></i></a>
             </div>
             <div class="card">
                 <span><i class="ri-bug-line"></i></span>
                 <h4>De-Bugging</h4>
-                <p>I Take pride in finding efficient solutions to my coding problems, as well as learning from my mistakes.</p> 
+                <p>I Take pride in finding efficient solutions to my coding problems.</p> 
                 <a href="contact.html">Contact Now <i class="ri-arrow-right-line"></i></a>
             </div>
             <div class="card">
@@ -96,32 +93,23 @@
         </p>
         <div class="project">
             <div class="card">
-                <div class="content">
                     <h4>Weather App</h4>
                     <p>Utilises openweather api to give weather info in realtime!</p>
                     <img src="resources/images/screenshot.jpeg">
-                    <button class="btn">Contact Now</button>
-                </div>
             </div>
         </div>
         <div class="project">
             <div class="card">
-                <div class="content">
                     <h4>Pixel Art Generator</h4>
                     <p>Simple pixel art paint app with options for canvas generation.</p>
                     <img src="resources/images/screenshot 2.jpeg">
-                    <button class="btn">Contact Now</button>
-                </div>
             </div>
         </div>
         <div class="project">
             <div class="card">
-                <div class="content">
                     <h4>Pass Generator</h4>
                     <p>A pass generator with different options to manage password creation.</p>
                     <img src="resources/images/screenshot 3.jpeg">
-                    <button class="btn">Contact Now</button>
-                </div>
             </div>
         </div>
     </section>
