--- a/068.Quote-API/public/delete-quote.html
+++ b/068.Quote-API/public/delete-quote.html
@@ -5,7 +5,7 @@
   <title>Quote API</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon"ç href="favicon.ico">
 </head>
 <body>
   <h1>Quote API</h1>
@@ -14,20 +14,19 @@
     <a href="add-quote.html">Add a New Quote</a>
     <a href="delete-quote.html">Delete a Quote</a>
   </nav>
-  <h2>Get Quotes</h2>
-  <div class="request-buttons">
-    <div>
-      <button id="fetch-random">Fetch a Random Quote</button>
-      <button id="fetch-quotes">Fetch all Quotes</button>
-    </div>
-    <div>
-      <input id="author" value="">
-      <button id="fetch-by-author">Fetch by Author</button>
-    </div>
+  <h2>Delete Quote</h2>
+  <div class="inputs">
+    <label for="quote">Quote text:</label>
+    <input id="quote" value="">
+    <label for="person">Person:</label>
+    <input id="person" value="">
   </div>
-  <div id="quote-container">
+  <div>
+    <button id="submit-quote">Delete Quote</button>
+  </div>
+  <div id="new-quote">
     
   </div>
-  <script src="script.js"></script>
+  <script src="delete-quote.js"></script>
 </body>
 </html>
